JC: added @erb_code and if loop in views.

--- a/config/locales/zh-CN.yml
+++ b/config/locales/zh-CN.yml
@@ -16,6 +16,7 @@ zh-CN:
   yes : '是'
   no  : '否'
   Duplicate Name!  : '名称重复！'
+  'Duplicate Name!' : '名称重复！'
   'Duplicate Serial#!'  : '序列#重复！'
   Last Updated By : '更改'
   Equipment Spec  : '设备规格'
@@ -46,4 +47,5 @@ zh-CN:
   Equipment Dimension (LWH) : '设备尺寸'
   Equipment Name  : '设备名称'
   Main Power(W) : '电机功率(W)'
-  'Note' : '注释'    
+  'Note' : '注释' 
+  'Operation Cost($/h)' : '开机成本（￥/时）'
